# constellation

./: .env.example  .gitignore  AGENT_ASSIGNMENTS.md  Cargo.toml  LICENSE  README.md
.claude/agents/: constellation-database-architect.md  constellation-devops-engineer.md  constellation-frontend-engineer.md  constellation-product-manager.md  constellation-qa-lead.md  constellation-rust-engineer.md  constellation-system-architect.md  openspec-steward.md
.codemachine/: template.json
.codemachine/inputs/: specifications.md
.github/ISSUE_TEMPLATE/: impl_task.md
.github/workflows/: ci.yml
crates/constellation-core/: Cargo.toml
crates/constellation-core/src/: lib.rs
crates/constellation-core/src/models/: agent.rs  dtg.rs  hybrid_agent.rs  mcp.rs  mod.rs
examples/: a2a_agent_example.rs  dtg_example.rs  hybrid_agent_example.rs  mcp_security_example.rs
openspec/: project.md
openspec/changes/: IMPLEMENTATION_ROADMAP.md
openspec/changes/add-a2a-message-broker/: proposal.md  tasks.md
openspec/changes/add-a2a-message-broker/specs/agent-a2a-protocol/: spec.md
openspec/changes/add-agent-communication-framework/: proposal.md  tasks.md
openspec/changes/enable-full-autonomy/: proposal.md  tasks.md
openspec/changes/incorporate-edge-research/: proposal.md  tasks.md
openspec/specs/agent-a2a-protocol/: design.md  openapi.yaml  spec.md
specs/: info.yaml  openapi.yaml
specs/components/schemas/: agent.yaml  budget.yaml  decision.yaml
specs/paths/agent/: messages.yaml
specs/paths/memory/: vectors.yaml
specs/paths/orchestrator/: agents.yaml
(+14 files in other folders)
