[package]
name = "constellation-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uuid = { version = "1.7", features = ["serde", "v4"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]

[[example]]
name = "a2a_agent_example"
path = "../../examples/a2a_agent_example.rs"

[[example]]
name = "dtg_example"
path = "../../examples/dtg_example.rs"

[[example]]
name = "mcp_security_example"
path = "../../examples/mcp_security_example.rs"

[[example]]
name = "hybrid_agent_example"
path = "../../examples/hybrid_agent_example.rs"
